<resources>
    <string name="app_name">FitMateApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="gradient">Gradient</string>
    <string name="go_for_a_walk">Go for a walk</string>
    <string name="_0">0</string>
    <string name="km">km</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="no_meal_records">No Meal Records</string>
    <string name="div">Div</string>
    <string name="no_activity_records">No Activity Records</string>
    <string name="fitmate">FitMate</string>
    <string name="meals">Meals</string>
    <string name="activity">Activity</string>
    <string name="history">History</string>
    <string name="choose_a_date">Choose a date:</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="weight">Weight</string>
</resources>