<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/gradient"
            android:scaleType="fitXY"
            android:src="@drawable/gradient" />

        <TextView
            android:id="@+id/textViewWalk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@color/dark_green"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/go_for_a_walk"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="@color/dark_green"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/textViewKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/km"
                android:textColor="@color/dark_green"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="210dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStart"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/dark_green"
                android:text="@string/start"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonStop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:enabled="false"
                android:text="@string/stop"
                android:textColor="@color/dark_grey"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
