<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HubFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:text="@string/fitmate"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="RtlSymmetry">

            </TextView>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMeals"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/dark_green"
                android:drawableBottom="@drawable/fork"
                android:paddingVertical="20dp"
                android:text="@string/meals"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonActivity"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/dark_green"
                android:drawableBottom="@drawable/jogging"
                android:paddingVertical="20dp"
                android:text="@string/activity"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/buttonHistory"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/dark_green"
                android:drawableBottom="@drawable/book"
                android:paddingVertical="20dp"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
