<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMealRecords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_blue"
            tools:ignore="NestedWeights"
            tools:listitem="@layout/item_meal_records" />

        <TextView
            android:id="@+id/textViewNoMealRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_meal_records"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewDiv"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/div"
        app:srcCompat="@drawable/div"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_red"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNoActivityRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_activity_records"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewActivityRecords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_red"
            tools:ignore="NestedWeights"
            tools:listitem="@layout/item_activity_records" />

    </LinearLayout>

</LinearLayout>
